--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <p>황원국</p>
           </li>
         </ul>
+        <div class="column-button">
+          <button class="button delete-button" onclick="emptyTrash()">종료</button>
+        </div>
       </li>
 
       <li class="column to-do-column">
@@ -57,6 +60,9 @@
             <p>안세희</p>
           </li>
         </ul>
+        <div class="column-button">
+          <button class="button delete-button" onclick="emptyTrash()">종료</button>
+        </div>
       </li>
     </ul>
   </div>
