--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
             <p>이석봉</p>
           </li>
         </ul>
+        <div class="column-button">
+          <button class="button delete-button" onclick="emptyTrash()">시작</button>
+        </div>
       </li>
 
       <li class="column doing-column">
