--- a/index.html
+++ b/index.html
@@ -111,37 +111,31 @@
 
   </div>
   <div class="members box">턴누리 회원
-    <ul>
+    <ul class="columns">
       <li class="column done-column">
         <div class="column-header">
           <h4>Done</h4>
         </div>
         <ul class="task-list" id="done">
           <li class="task">
-            <p>Ideation</p>
+            <p>홍양용</p>
           </li>
           <li class="task">
-            <p>Sketches</p>
+            <p>이찌방</p>
+          </li>
+          <li class="task">
+            <p>빠삐꼬</p>
+          </li>
+          <li class="task">
+            <p>호로록</p>
+          </li>
+          <li class="task">
+            <p>똥꾸</p>
           </li>
         </ul>
       </li>
   
-      <li class="column trash-column">
-        <div class="column-header">
-          <h4>Trash</h4>
-        </div>
-        <ul class="task-list" id="trash">
-          <li class="task">
-            <p>Interviews</p>
-          </li>
-          <li class="task">
-            <p>Research</p>
-          </li>
-  
-        </ul>
-        <div class="column-button">
-          <button class="button delete-button" onclick="emptyTrash()">Delete</button>
-        </div>
+
       </li>
 
     </ul>
