--- a/index.html
+++ b/index.html
@@ -142,6 +142,21 @@
 
   </div>
   <div class="waitting box">대기
+    <ul class="columns">
+      <li class="column trash-column">
+        <div class="column-header">
+          <h4>Trash</h4>
+        </div>
+        <ul class="task-list" id="trash">
+          <li class="task">
+            <p>Interviews</p>
+          </li>
+          <li class="task">
+            <p>Research</p>
+          </li>
+
+        </ul>
+    
     <div class="add-task-container">
       <input type="text" maxlength="12" id="taskText" placeholder="New Task..." onkeydown="if (event.keyCode == 13)
                             document.getElementById('add').click()">
