--- a/index.html
+++ b/index.html
@@ -138,9 +138,8 @@
     </ul>
 
     <div class="add-task-container">
-      <input type="text" maxlength="12" id="taskText" placeholder="New Task..." onkeydown="if (event.keyCode == 13)
-                            document.getElementById('add').click()">
-      <button id="add" class="button add-button" onclick="addTask()">Add New Task</button>
+      <input type="text" maxlength="12" id="taskText" placeholder="New Task..." onkeydown="if (event.keyCode == 13) document.getElementById('add').click()">
+      <button id="add" class="button add-button" onclick="addTask()">게스트 추가</button>
     </div>
 
   </div>
