--- a/index.html
+++ b/index.html
@@ -19,49 +19,49 @@
   <div class="playing box">게임중
     <ul class="columns">
 
-      <li class="column to-do-column">
+      <li class="column playing-column">
         <div class="column-header">
           <h4>1번 게임</h4>
         </div>
-        <ul class="task-list" id="to-do">
-          <li class="task">
+        <ul class="player-list" id="playing1">
+          <li class="player">
             <p>최근환</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>최준상</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>손용우</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>황원국</p>
           </li>
         </ul>
         <div class="column-button">
-          <button class="button delete-button" onclick="emptyTrash()">종료</button>
+          <button class="button delete-button" onclick="endGame()">종료</button>
         </div>
       </li>
 
-      <li class="column to-do-column">
+      <li class="column playing-column">
         <div class="column-header">
           <h4>2번 게임</h4>
         </div>
-        <ul class="task-list" id="to-do">
-          <li class="task">
+        <ul class="player-list" id="playing2">
+          <li class="player">
             <p>이양임</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>김해정</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>성효인</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>안세희</p>
           </li>
         </ul>
         <div class="column-button">
-          <button class="button delete-button" onclick="emptyTrash()">종료</button>
+          <button class="button delete-button" onclick="endGame()">종료</button>
         </div>
       </li>
     </ul>
@@ -72,17 +72,17 @@
         <div class="column-header">
           <h4>1번 대기</h4>
         </div>
-        <ul class="task-list" id="doing">
-          <li class="task">
+        <ul class="player-list" id="doing">
+          <li class="player">
             <p>박부국</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>민호성</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>변용섭</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>이석봉</p>
           </li>
         </ul>
@@ -95,14 +95,14 @@
         <div class="column-header">
           <h4>2번 대기</h4>
         </div>
-        <ul class="task-list" id="doing">
-          <li class="task">
+        <ul class="player-list" id="doing">
+          <li class="player">
             <p>이상진</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>허어녕</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>박정택</p>
           </li>
         </ul>
@@ -116,29 +116,29 @@
         <div class="column-header">
           <h4>Done</h4>
         </div>
-        <ul class="task-list" id="done">
-          <li class="task">
+        <ul class="player-list" id="done">
+          <li class="player">
             <p>홍양용</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>이찌방</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>빠삐꼬</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>호로록</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>똥꾸</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>찌찌뽕</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>반딧불</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>헬렐레</p>
           </li>
         </ul>
@@ -146,7 +146,7 @@
 
     </ul>
 
-    <div class="add-task-container">
+    <div class="add-player-container">
       <input type="text" maxlength="12" id="guestText" placeholder="게스트 추가" onkeydown="if (event.keyCode == 13) document.getElementById('add').click()">
       <button id="add" class="button add-button" onclick="addGuest()">게스트 추가</button>
     </div>
@@ -158,11 +158,11 @@
         <div class="column-header">
           <h4>Trash</h4>
         </div>
-        <ul class="task-list" id="trash">
-          <li class="task">
+        <ul class="player-list" id="trash">
+          <li class="player">
             <p>Interviews</p>
           </li>
-          <li class="task">
+          <li class="player">
             <p>Research</p>
           </li>
         </ul>
@@ -174,7 +174,10 @@
 
 
 <!-- partial -->
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.js'></script><script  src="./script.js"></script>
+
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.js'></script>
+  <script  src="./script.js"></script>
 
 </body>
 </html>
