--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <div class="column-header">
           <h4>1번 대기</h4>
         </div>
-        <ul class="player-list" id="doing">
+        <ul class="player-list" id="scheduled1">
           <li class="player">
             <p>박부국</p>
           </li>
@@ -87,7 +87,7 @@
           </li>
         </ul>
         <div class="column-button">
-          <button class="button delete-button" name="startGame">시작</button>
+          <button class="button add-button" name="startGame">시작</button>
         </div>
       </li>
 
@@ -95,7 +95,7 @@
         <div class="column-header">
           <h4>2번 대기</h4>
         </div>
-        <ul class="player-list" id="doing">
+        <ul class="player-list" id="scheduled2">
           <li class="player">
             <p>이상진</p>
           </li>
@@ -112,11 +112,11 @@
   </div>
   <div class="members box">턴누리 회원
     <ul class="columns">
-      <li class="column done-column">
+      <li class="column member-column">
         <div class="column-header">
-          <h4>Done</h4>
+          <h4>member</h4>
         </div>
-        <ul class="player-list" id="done">
+        <ul class="player-list" id="member">
           <li class="player">
             <p>홍양용</p>
           </li>
