--- a/layout.html
+++ b/layout.html
@@ -1,4 +1,7 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="./style.css">
+  </head>
 <div class="wrapper">
   <div class="one">One</div>
   <div class="two">Two</div>
