--- a/layout.html
+++ b/layout.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./layout.css">
   </head>
 <div class="wrapper">
   <div class="one">One</div>
