--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="column-header">
           <h4>member</h4>
         </div>
-        <ul class="player-list" id="member">
+        <ul class="column-list" id="member">
           <li class="player">
             <p>홍양용</p>
           </li>
@@ -159,7 +159,7 @@
         <div class="column-header">
           <h4>대기</h4>
         </div>
-        <ul class="player-list" id="waiting">
+        <ul class="column-list" id="waiting">
           <li class="player">
             <p>Interviews</p>
           </li>
