--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>CodePen - Simple Drag and Drop Lean Kanban Board Tool</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css'>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="./style.css?120401">
 
 </head>
 <body>
@@ -178,7 +178,7 @@
 
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/dragula/3.7.2/dragula.js'></script>
-  <script  src="./script.js"></script>
+  <script  src="./script.js?120401"></script>
 
 </body>
 </html>
