--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </div>
         <ul class="player-list">
           <li class="player">
-            <p>박부국</p>
-            <p>50B</p>
-            <p>1</p>
+            <p class="name">박부국</p>
+            <p class="class">50B</p>
+            <p class="times">1</p>
           </li>
           <li class="player">
             <p>민호성</p>
